.happypack/s--442708518
/Users/tmac_zc/Code/kr-admin/src/Containers/Permission/AccountList/index.js: Unexpected token, expected ( (183:9)
SyntaxError: /Users/tmac_zc/Code/kr-admin/src/Containers/Permission/AccountList/index.js: Unexpected token, expected ( (183:9)
[0m [90m 181 | [39m	render
 [90m 182 | [39m
[31m[1m>[22m[39m[90m 183 | [39m		console[33m.[39mlog(searchParams)[33m;[39m
 [90m     | [39m		       [31m[1m^[22m[39m
 [90m 184 | [39m		let options[33m=[39m[
 [90m 185 | [39m		 {label[33m:[39m[32m'登录名'[39m[33m,[39mvalue[33m:[39m[32m'company'[39m}[33m,[39m
 [90m 186 | [39m		 {label[33m:[39m[32m'姓名'[39m[33m,[39mvalue[33m:[39m[32m'city'[39m}[33m,[39m[0m
    at Parser.pp$5.raise (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.pp.unexpected (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1627:8)
    at Parser.pp.expect (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1615:33)
    at Parser.pp$3.parseMethod (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3964:8)
    at Parser.parseClassMethod (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5474:12)
    at Parser.pp$1.parseClassBody (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2391:10)
    at Parser.pp$1.parseClass (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2270:8)
    at Parser.pp$1.parseStatement (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1711:19)
    at Parser.parseStatement (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5218:22)
    at Parser.pp$1.parseBlockBody (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2133:21)
    at Parser.pp$1.parseTopLevel (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1645:8)
    at Parser.parse (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1537:17)
    at Object.parse$1 [as parse] (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6466:37)
    at File.parse (/Users/tmac_zc/Code/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:479:24)
    at File.parseCode (/Users/tmac_zc/Code/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:568:20)
    at /Users/tmac_zc/Code/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/pipeline.js:48:12
    at File.wrap (/Users/tmac_zc/Code/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:528:16)
    at Pipeline.transform (/Users/tmac_zc/Code/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/pipeline.js:46:17)
    at transpile (/Users/tmac_zc/Code/kr-admin/node_modules/.6.2.4@babel-loader/index.js:14:22)
    at /Users/tmac_zc/Code/kr-admin/node_modules/.6.2.4@babel-loader/lib/fs-cache.js:145:18
    at ReadFileContext.callback (/Users/tmac_zc/Code/kr-admin/node_modules/.6.2.4@babel-loader/lib/fs-cache.js:28:23)
    at FSReqWrap.readFileAfterOpen [as oncomplete] (fs.js:365:13)